...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <!-- Recycler View to display time lapse photo projects -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/projects_recycler_view"
        android:contentDescription="@string/projects_recycler_view_content_description"
        android:paddingTop="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <!-- App bar and tool bar -->
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <!-- FAB to create a new project -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_project_FAB"
            android:contentDescription="@string/add_project_FAB_content_description"
            android:visibility="invisible"
            android:transitionName="add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
...
