...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.NewProjectActivity">

            <!-- Project Name edit text -->
            <EditText
                android:id="@+id/project_name_edit_text"
                android:hint="@string/project_name"
                android:gravity="center"
                android:layout_width="@dimen/project_name_edit_text_width"
                android:layout_height="@dimen/touch_target_min"
                android:layout_margin="@dimen/textview_margin"
                android:inputType="textCapWords"
...
            android:theme="@style/AppToolbar"
            android:minHeight="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Submit project FAB -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/submit_new_project_fab"
        android:contentDescription="@string/submit_new_project_fab_content_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check_white_24dp"
        android:backgroundTint="@color/colorRedAccent"
...
