<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/delete_photo"
        android:title="@string/delete_photo"
        app:showAsAction="never"/>

    <item android:id="@+id/edit_project"
        android:title="@string/edit_project"
        app:showAsAction="never"/>

    <item android:id="@+id/delete_project"
        android:title="@string/delete_project"
        app:showAsAction="never"
        />

</menu>