...
            android:id="@+id/image_loading_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_marginEnd="@dimen/fab_size_plus_padding"
            android:layout_marginStart="@dimen/detail_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/details_recyclerview"
            app:layout_constraintStart_toStartOf="@+id/details_recyclerview"
            app:layout_constraintEnd_toStartOf="@+id/details_recyclerview"/>

        <!-- Recycler view showing the photos in the project -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/details_recyclerview"
...
            android:theme="@style/AppToolbar"
            android:minHeight="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- FAB to add a new photo -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_photo_fab"
        android:contentDescription="@string/add_photo_fab_content_description"
        android:transitionName="add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_detail_margin_bottom"
        android:layout_marginEnd="@dimen/fab_margin"
...
