...
            android:theme="@style/AppToolbar" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Recycler View to display time lapse photo projects -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/gallery_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/projects_recycler_view_content_description"
        android:paddingTop="?attr/actionBarSize"
        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
        app:spanCount="3"
...
        android:layout_gravity="end|bottom">
        <!-- indicator for active search -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/search_active_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/add_project_FAB"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/medium"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/content_description_search_active_fab"
            android:src="@drawable/ic_search_cancel_24dp"
            android:visibility="invisible"
...
